<resources>
    <string name="app_name">FreshCam</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Setting">Setting</string>
    <string name="Home">Home</string>
    <string name="Scan">Scan</string>
    <string name="fruit_of_the_day">Fruit of the Day</string>
    <string name="more_info">more info</string>
    <string name="Description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu augue ut lectus arcu bibendum at varius vel pharetra.</string>
    <string name="fruit_tips">Fruit Tips</string>
    <string name="fruit_title">Fruit Title</string>
    <string name="title">Title</string>
    <string name="sub_title">Sub Title</string>
    <string name="about">About</string>
    <string name="aboutDesc">About Description</string>
    <string name="take_photo">take photo</string>
    <string name="take_from_gallery">take from gallery</string>
    <string name="flash_on">flash on</string>
    <string name="frame_capture">frame capture</string>
    <string name="failed_pick_photo">failed to capture photo</string>
    <string name="failed_get_camera">failed to get camera</string>
    <string name="pick_photo">pick photo</string>
    <string name="error_request">request failed, please try again</string>
    <string name="unable_fetch_stories">failed to fetch detail fruits, please try again</string>
    <string name="history_scan">History Scan</string>
    <string name="user_guide">User Guide</string>
    <string name="carbs">Carbs</string>
    <string name="protein">Protein</string>
    <string name="calories">Calories</string>
    <string name="nutritions">Nutritions :</string>
    <string name="vitamin">Vitamin :</string>
    <string name="choosing_tips">Choosing Tips :</string>
    <string name="tips_decsription">Tips Decsription</string>
    <string name="fat">Fat</string>
    <string name="cannot_get_labels">cannot fetch labels</string>
    <string name="fruit_name">Fruit Name</string>
    <string name="detection">Fresh or Rotten</string>
    <string name="about_app">About App</string>
    <string name="version">Version</string>
    <string name="date_posted">date posted</string>
    <string name="app_logo">App Logo</string>
    <string name="one_time_setup">"Preparing "</string>
    <string name="one_time">wait a moment, we are preparing all the features to be ready.</string>
    <string name="all_ready_to_go">All Ready to go</string>
    <string name="close">close</string>
    <string name="see_guide">see guide</string>
    <string name="internet_disconnected">internet disconnected</string>
    <string name="retry">retry</string>
    <string name="unable_fetch_fotd">unable to fetch fruits of the day, please try again later.</string>
    <string name="unable_to_fetch_tips">unable to fetch tips, please try again later.</string>
    <string name="unable_to_fetch_detail_tips">unable to fetch detail tips, please try again</string>
    <string name="title_guide">You can detect fruit via camera or input images in your gallery</string>
    <string name="back_button">back button</string>
    <string name="scan_history">Scan History</string>
    <string name="fruit_image">fruit image</string>
    <string name="update_model_downloading">Update Model : Downloading...</string>
</resources>