<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.settings.views.OneTimeSetUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/preparing"

        tools:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivLauncher"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:contentDescription="@string/app_logo"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/linear_progress"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:padding="16dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_time"
            app:layout_constraintBottom_toTopOf="@+id/linear_progress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/on_success"
        tools:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:padding="16dp"
            android:id="@+id/prepare_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_ready_to_go"
            app:layout_constraintBottom_toTopOf="@+id/ivLauncherSuccess"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/ivLauncherSuccess"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:contentDescription="@string/app_logo"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            app:backgroundTint="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/ivLauncherSuccess"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLauncherSuccess" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/go_to_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_guide"
            app:backgroundTint="@color/secondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/ivLauncherSuccess"
            app:layout_constraintTop_toBottomOf="@+id/ivLauncherSuccess" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/on_internet_lost"
        tools:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:padding="16dp"
            android:id="@+id/prepare_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/internet_disconnected"
            app:layout_constraintBottom_toTopOf="@+id/ivLauncherError"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/ivLauncherError"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/ic_baseline_error_outline_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/retry"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:text="@string/retry"
            app:layout_constraintEnd_toEndOf="@+id/ivLauncherError"
            app:layout_constraintStart_toStartOf="@+id/ivLauncherError"
            app:layout_constraintTop_toBottomOf="@+id/ivLauncherError" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>