<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:columnCount="4"
    android:rowCount="2"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="120dp"
        app:cardCornerRadius="15dp"
        app:cardMaxElevation="5dp"
        app:cardElevation="5dp"
        android:layout_margin="4dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:src="@drawable/carbs"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/carbs"
                android:gravity="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="120dp"
        app:cardCornerRadius="15dp"
        app:cardMaxElevation="5dp"
        app:cardElevation="5dp"
        android:layout_margin="4dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/protein"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/protein"
                android:gravity="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="120dp"
        app:cardCornerRadius="15dp"
        app:cardMaxElevation="5dp"
        app:cardElevation="5dp"
        android:layout_margin="4dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/calories"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/calories" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="120dp"
        app:cardCornerRadius="15dp"
        app:cardMaxElevation="5dp"
        app:cardElevation="5dp"
        android:layout_margin="4dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/fat"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fat"
                android:gravity="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</GridLayout>